--- a/intex.html
+++ b/intex.html
@@ -13,7 +13,7 @@
     <div class="box">
         <div>
             <form action="">
-                <input type="text" id="list">
+                <input type="text" id="list" placeholder="Enter your list">
                 <button id="btn" onclick="update(event)" class="add">Add</button>
             </form>
         </div>
